--- a/mod/itp/Makefile
+++ b/mod/itp/Makefile
@@ -4,3 +4,9 @@ all: itp
 
 itp:
 	@echo "Not implemented yet."
+
+verify:
+	for i in $(PFX)*.itp; do \
+		echo $${i}; \
+		gffprint.pl $${i} >/dev/null ; \
+	done
