--- a/mod/Makefile
+++ b/mod/Makefile
@@ -13,7 +13,6 @@ VALIDEXT=area/\*.git area/\*.gic area/\*.are \
 
 LISTS=uti utp utc utm
 
-all: package
 
 path:
 ifeq  "$(NWNHOME)" ""
@@ -61,6 +60,7 @@ uncrustify:
 
 clean:
 	$(MAKE) -C nss clean clean-backup
+	rm *.mod
 	
 local: path
 	../buildutil/erfpack.pl -m -o $(NAME).mod $(VALIDEXT)
@@ -69,4 +69,6 @@ install:
 	cp -v $(NAME).mod $(NWNHOME)/modules/
 
 # generates a new package with the current revision
-package: path scripts itp local
+package: path scripts ifo itp local
+
+all: clean package install
