r41: add initial timed xp support move config for uncrustify move update-revision.sh to buildutil add initial unified persistent object support add db schema directory

--- a/mod/nss/Makefile
+++ b/mod/nss/Makefile
@@ -7,18 +7,18 @@ NSSVERIFYFLAGS=-g -o -q -t4
 all: scripts
 compile: scripts
 scripts:
-	../update-revision.sh ..
+	../../buildutil/update-revision.sh ..
 	$(NSS) $(NSSFLAGS) $(NWNHOME) *.nss
 
 verify:
 	$(NSS) $(NSSVERIFYFLAGS) $(NWNHOME) *.nss
 
 clean:
-	-rm *.ncs *.ndb
+	-rm *.ncs *.ndb _buildinfo.nss
 
 clean-backup:
 	-rm *.*~ *.out
 
 uncrustify:
-	uncrustify -L 2 -c ../uncrustify.cfg --replace -l C *.nss
+	uncrustify -L 2 -c ../conf/uncrustify.cfg --replace -l C *.nss
 
