--- a/linnwnx2/Makefile.in
+++ b/linnwnx2/Makefile.in
@@ -6,7 +6,7 @@ CPPFLAGS = @CPPFLAGS@
 
 # Add your own plugins to the compilation with this configure option:
 # ./configure --with-extraplugins="plugin1 plugin2 ..."
-SUBDIRS = db mnx functions hashset @EXTRAPLUGINDIRS@
+SUBDIRS = db pgsql mnx functions hashset @EXTRAPLUGINDIRS@
 
 all: nwnx2.so subdirs
 
