--- a/linnwnx2/db/Makefile.in
+++ b/linnwnx2/db/Makefile.in
@@ -6,8 +6,7 @@ DEFS = @DEFS@
 # Note: If you're getting missing symbols like
 # compress, deflate, etc. add -lz to the end of
 # the next line and rerun configure
-LIBS = @LIBS@ -L/usr/lib/mysql -lmysqlclient
-# LIBS = @LIBS@ -L/usr/lib/mysql -lmysqlclient -lz
+LIBS = @LIBS@ -L/usr/lib/mysql -lmysqlclient -lz -L/usr/local/pgsql/lib -lpq
 
 # TODO: snarf from configure somehow
 # the user should be able to specify NWNXDIR
@@ -22,11 +21,15 @@ CPPFLAGS = @CPPFLAGS@ -I$(NWNXDIR)
 
 NWNXBASE=$(NWNXDIR)/NWNXBase.o $(NWNXDIR)/gline.o 
 
-all: nwnx_odbc.so
+all: nwnx_odbc.so nwnx_pgsql.so
 
 # dbodbc.o
 nwnx_odbc.so: NWNXmysql.o plugin-mysql.o data.o dbmysql.o
 	$(CXX) $(FLAGS) -o $@ $^ $(LIBS) $(DEFS)
+# pgsql
+nwnx_pgsql.so: NWNXpgsql.o plugin-pgsql.o data.o dbpgsql.o
+	$(CXX) $(FLAGS) -o $@ $^ $(LIBS) $(DEFS)
+
 
 plugin-t: plugin-t.o $(NWNXBASE)
 	$(CXX) -o $@ $(CXXFLAGS) $^ -ldl
@@ -39,3 +42,4 @@ distclean: clean
 
 install: all
 	mkdir -p @prefix@/ ; install nwnx_odbc.so @prefix@/
+	mkdir -p @prefix@/ ; install nwnx_pgsql.so @prefix@/
