--- a/mod/utc/Makefile
+++ b/mod/utc/Makefile
@@ -4,3 +4,7 @@ verify:
 		echo $${i}; \
 		gffprint.pl $${i} >/dev/null ; \
 	done
+
+
+deploy:
+	rsync -Pdu --include \*.utc --delete-after --exclude \* . $(NWNHOME)/res
