--- a/client_cep2c/Makefile
+++ b/client_cep2c/Makefile
@@ -23,4 +23,4 @@ hak: path
 	erfpack.pl -H -o $(NWNHOME)/hak/$(NAME).hak $(VALIDEXT)
 
 publish:
-	rsync -Pzva $(NWNHOME)/hak/$(NAME).hak elven@swordcoast.net::nwn-w/hak/
+	rsync -Pzva $(NWNHOME)/hak/$(NAME).hak elven@aryvandaar.swordcoast.net::nwn-w/hak/
