--- a/linnwnx2/db/Makefile.in
+++ b/linnwnx2/db/Makefile.in
@@ -6,7 +6,7 @@ DEFS = @DEFS@
 # Note: If you're getting missing symbols like
 # compress, deflate, etc. add -lz to the end of
 # the next line and rerun configure
-LIBS = @LIBS@ -L/usr/lib/mysql -lmysqlclient -lz
+LIBS = @LIBS@ -L/usr/lib/mysql -lmysqlclient -lpq -lz
 
 # TODO: snarf from configure somehow
 # the user should be able to specify NWNXDIR
