--- a/linnwnx2/functions/Makefile.in
+++ b/linnwnx2/functions/Makefile.in
@@ -18,7 +18,7 @@ NWNXBASE=$(NWNXDIR)/NWNXBase.o $(NWNXDIR)/gline.o
 
 all: nwnx_functions.so
 
-nwnx_functions.so: NWNXFunction.o plugin-functions.o
+nwnx_functions.so: C2DA.o FunctionHooks.o NWNXFunction.o plugin-functions.o
 	$(CXX) $(FLAGS) -o $@ $^ $(LIBS) $(DEFS)
 
 clean:
