r477: add build target for buildutil.nss

--- a/mod/nss/Makefile
+++ b/mod/nss/Makefile
@@ -31,6 +31,9 @@ all: update-revision $(objects)
 
 scripts: $(objects)
 
+
+_buildutil.nss: update-revision
+
 update-revision:
 	@echo 'const string PROJECT = "Silbermarken";' > _buildinfo.nss
 	@echo 'const string REVISION = "$(revision)";' >>_buildinfo.nss
