--- a/mod/uti/Makefile
+++ b/mod/uti/Makefile
@@ -9,7 +9,7 @@ clean_recipes:
 	-rm cp_[0-9]*.uti
 
 recipes:
-	../../buildutil/gen_recipes.rb ../../database.yaml .
+	gen_recipes.rb ../../database.yaml .
 
 deploy:
 	rsync -Pdu --include \*.uti --delete-after --exclude \* . $(NWNHOME)/res
