[build] add support for area ignores

--- a/mod/mod/Makefile
+++ b/mod/mod/Makefile
@@ -1,5 +1,7 @@
 
+AREAS := $(shell ls -1 ../area/*.are | egrep -v "(ooc_solace|ascriptlimbo).are")
+
 ifo:
-	update-ifo.pl ../area/\*.are
+	update-ifo.pl $(AREAS)
 
 clean:
