Revert "[build] add support for area ignores"
This reverts commit a196376a7379711f7bb69b38ac272fcb57ce6f1f.

--- a/mod/mod/Makefile
+++ b/mod/mod/Makefile
@@ -1,7 +1,5 @@
 
-AREAS := $(shell ls -1 ../area/*.are | egrep -v "(ooc_solace|ascriptlimbo).are")
-
 ifo:
-	update-ifo.pl $(AREAS)
+	update-ifo.pl ../area/\*.are
 
 clean:
